--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=2Azelelao.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.application.name=macdonalts
+spring.jackson.serialization.fail-on-empty-beans=false
 server.port=8000
