Add Service mial Sender
Adicionei o servico de envio de emails.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.show-sql=true
 spring.application.name=macdonalts
 spring.jackson.serialization.fail-on-empty-beans=false
 server.port=8000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SPRING_USER_MAIL}
+spring.mail.password=${SPRING_PASSWORD_MAIL}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
