--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.jpa.hibernate.ddl-auto:update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/macdonalts
+spring.datasource.url=jdbc:mysql://localhost:3306/macdonalts?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=2Azelelao.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
